--- a/web/resources/css/cssLayout.css
+++ b/web/resources/css/cssLayout.css
@@ -1,3 +1,13 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
 
 #top {
     position: relative;
@@ -14,36 +24,16 @@
     margin: 10px 0px 0px 0px;
 }
 
-#left {
-    float: left;
-    background-color: #ece3a5;
-    padding: 5px;
-    width: 150px;
-}
-
-#right {
-    float: right;
-    background-color: #ece3a5;
-    padding: 5px;
-    width: 150px;
-}
-
 .center_content {
     position: relative;
     background-color: #dddddd;
     padding: 5px;
 }
 
-.left_content {
-    background-color: #dddddd;
-    padding: 5px;
-    margin-left: 170px;
-}
-
 .right_content {
-    background-color: #dddddd;
     padding: 5px;
-    margin: 0px 170px 0px 170px;
+	max-width: 900px;
+    margin: 0px 10px 0px 10px;
 }
 
 #top a:link, #top a:visited {
